fix minor spacing issues in story-footer

--- a/sass/modules/_story-footer.scss
+++ b/sass/modules/_story-footer.scss
@@ -43,7 +43,6 @@
   &__section {
     @include clearfix;
     padding-top: 1em;
-    padding-right: 1em;
     padding-bottom: 1em;
     padding-left: 0;
     font-weight: 100;
